--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-463.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-823.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇻🇳 越南-3.09MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-7.22MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-532.2KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-232.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-384.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-565.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-588.1KB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
@@ -22,12 +22,12 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
@@ -37,12 +37,12 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
@@ -53,12 +53,12 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
@@ -73,12 +73,12 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
@@ -88,12 +88,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
@@ -104,12 +104,12 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
@@ -129,12 +129,12 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-565.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
