--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-662.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-773.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-862.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-178.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-486.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-2.63MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20020, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-172.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-756.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-837.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-750.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-391.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-773.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-862.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-486.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-756.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-837.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-750.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
