--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-578.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-329.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-447.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-448.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇭🇰 香港-616.4KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇨🇳 中国-344.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-461.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-5.61MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20020, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-899.8KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-646.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-607.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-628.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-449.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-578.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-893.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-616.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
